2 August 2005 Sylvain Pion
- Interval_nt : Add overloads for is_zero, is_one, is_positive, is_negative.
- New file Interval_nt_fwd.h to gather forward declarations to be sourced by
  CGAL/number_type_basic.h.

2 August 2005 Sylvain Pion
- Uncertain : add maker function make_uncertain().

2 August 2005 Sylvain Pion
- Lazy_exact_nt : add prune_dag() to cut it down when the exact is computed.
- Lazy_exact_nt : recompute interval in update_exact, except when is_point().
- Lazy_exact_nt : introduce a static variable for zero since it's often used.

2 August 2005 Sylvain Pion
- Lazy_exact_nt : fix the identical() optimization.
- Lazy_exact_nt : add mixed operators between Lazy_exact_nt<ET1> and
  Lazy_exact_nt<ET2>
- Binary_operator_result<T1, T2> : new tool to get the type of mixed
  operators.
- Binary_operator_result.h : move to Number_types.
- Add specialization of
  Binary_operator_result< Lazy_exact_nt<ET1>, Lazy_exact_nt<ET2> >.

1 August 2005 Sylvain Pion
- Fix for last change.

1 August 2005 Sylvain Pion
- Replace uses of convert_to() by NT_converter.
- Add NT_converter<Lazy_exact_nt<ET>, ET> specialization.
- Change Exact_type_selecter for Lazy_exact_nt<ET> to ET
  (instead of Lazy_exact_nt<ET>).

30 July 2005 Sylvain Pion
- Add Uncertain<T>.
- Use it in comparison operators and sign() and compare() of Interval_nt.
- Use it instead of Certified::operators in Lazy_exact_nt.
- Filtered_predicate : use is_indeterminate() on AP's result_type to replace
  some exceptions by normal control flow.

28 July 2005 Andreas Fabri
- Added a functor to Lazy.h that writes the computed result in an OutputIterator 
  of Object

28 July 2005 Sylvain Pion
- Interval_nt : Increment number_of_failures for the CGAL::Certified operators.

28 July 2005 Andreas Fabri
- Added a functor to Lazy.h that has Object as return value as they are needed
  by Kernel::Intersect_2


26 July 2005 Sylvain Pion
- Filtered_kernel : No need to explicitely mention To_interval as argument