@@ -2,6 +2,7 @@
 - Interval_nt : Add overloads for is_zero, is_one, is_positive, is_negative.
 - New file Interval_nt_fwd.h to gather forward declarations to be sourced by
   CGAL/number_type_basic.h.
+- Lazy_exact_nt : Fix for some mixed operators.
 
 2 August 2005 Sylvain Pion
 - Uncertain : add maker function make_uncertain().
